github.com does not allow use PHP??? Unfortunately.

--- a/links.html
+++ b/links.html
@@ -11,7 +11,7 @@
 <TABLE WIDTH=100% CELLPADDING=5 CELLSPACING=0>
     <TR VALIGN=TOP>
         <TD WIDTH=20% STYLE="border: none; padding: 0cm">
-            <P ALIGN=CENTER STYLE="background: #e6e6ff; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
+            <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
             <A HREF="http://pa23.github.com/">Главная</A></P>
         </TD>
         <TD WIDTH=20% STYLE="; border: none; padding: 0cm">
@@ -23,7 +23,7 @@
             <A HREF="http://pa23.github.com/projects.html">Проекты</A></P>
         </TD>
         <TD WIDTH=20% STYLE="; border: none; padding: 0cm">
-            <P ALIGN=CENTER STYLE="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
+            <P ALIGN=CENTER STYLE="background: #e6e6ff; border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding: 0.1cm 0cm">
             <A HREF="http://pa23.github.com/links.html">Ссылки</A></P>
         </TD>
         <TD WIDTH=20% STYLE="; border: none; padding: 0cm">
@@ -32,18 +32,10 @@
         </TD>
     </TR>
 </TABLE>
-<BR><BR>
+<BR>
 
-Я приветствую вас, посетитель! Мое имя - Артем Петров, 
-а данный сайт содержит информацию о моих проектах, релизах новых версий и т.п. Надеюсь, что он будет вам полезен.
-<BR><BR>
-Мои предпочтения:
 <ul>
-    <li>Я люблю <A HREF="http://ru.wikipedia.org/wiki/C%2B%2B">C++</A>. Да, он не без темных мест, однако невероятно крут. Как справедливо заметил про C++ <A HREF="http://cplusplus.dshevchenko.biz/">Денис Васильевич</A>: "Несовершенен, как все. Силён, как немногие.".</li>
-    <li>В своих проектах я использую <A HREF="http://qt.nokia.com/products">Qt framework</A>, достоинства которого трудно переоценить.</li>
-    <li>А также очень удобную <A HREF="http://ru.wikipedia.org/wiki/%D0%A1%D0%B8%D1%81%D1%82%D0%B5%D0%BC%D0%B0_%D1%83%D0%BF%D1%80%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F_%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D1%8F%D0%BC%D0%B8">систему управления версиями</A> <A HREF="http://git-scm.com/">git</A>.</li>
-    <li>Я благодарен <A HREF="https://github.com/">github.com</A>. С ним очень удобно.</li>
-    <li>Я - сторонник <A HREF="http://ru.wikipedia.org/wiki/Free_software">Свободного программного обеспечения</A>. И всегда им останусь. Мой выбор - <A HREF="http://www.gnu.org/licenses/gpl-3.0.html">GPL</A>.</li>
+    <li><A HREF="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2011/n3290.pdf">Cтандарт C++ 2011 (PDF)</A></li>
 </ul>
 
 <P STYLE="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.08cm; padding-left: 0cm; padding-right: 0cm"><BR></P>
